--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87); */
-  background-color: #EBEDF0;
+  background-color: #ebedf0;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
