--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -8,6 +8,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 30px 20px;
+    width: 100%;
 
     .nav-title {
       a {
@@ -24,7 +25,8 @@ nav {
     .nav-list {
       display: flex;
       list-style: none;
-      gap: 3rem;
+      gap: 2rem;
+      margin-right: 60px;
 
       li {
         background-color: #fff;
