--- a/src/styles/RaceLane.css
+++ b/src/styles/RaceLane.css
@@ -1,52 +1,72 @@
- .race-lane {
-            width: 100%;
-            border-top: 5px solid #96A4B5;
-            border-bottom: 5px solid #96A4B5;
-            padding: 15px 0 15px 0;
-            display: flex;
-            align-items: center;
+.race-lanes-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 
+.race-lane {
+  width: 100%;
+  border-top: 5px solid #96a4b5;
+  border-bottom: 5px solid #96a4b5;
+  padding: 15px 0;
+  display: flex;
+  align-items: center;
+  position: relative;
+  overflow: visible;
+}
 
-            .car-control-panel {
-                display: flex;
-                column-gap: 2rem;
+.car-control-panel {
+  display: flex;
+  column-gap: 2rem;
+  position: relative;
+  z-index: 2;
 
-                button {
-                    height: 50px;
-                    width: 90px;
-                    border: none;
-                    border-radius: 10px;
-                    cursor: pointer;
-                }
+  button {
+    height: 50px;
+    width: 90px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+  }
 
-                .car-control-button {
-                    height: 50px;
-                    width: 40px;
-                    background-color: #FDC039;
-                    border-radius: 20px;
-                    color: black;
-                    font-weight: 700;
-                }
+  .car-control-button {
+    height: 50px;
+    width: 40px;
+    background-color: #fdc039;
+    border-radius: 20px;
+    color: black;
+    font-weight: 700;
+  }
 
-                .car-select-button {
-                    background-color: #56B084;
-                    color: #fff;
+  .car-select-button {
+    background-color: #56b084;
+    color: #fff;
+  }
 
-                }
+  .car-remove-button {
+    background-color: red;
+    color: #fff;
+  }
+}
 
-                .car-remove-button {
-                    background-color: red;
-                    color: #fff;
-                }
-            }
+.track {
+  flex: 1;
+  padding-left: 40px;
+  position: relative;
+  min-height: 120px;
+  overflow: visible;
+  isolation: isolate;
 
-            .track {
-                width: 100%;
-                padding-left: 40px;
+  div {
+    width: 100%;
+  }
+}
 
-                div {
-                    width: 100%;
-                }
-            }
-
-        }
+.car-container {
+  position: absolute;
+  left: 0;
+  width: 140px;
+  height: 90px;
+  z-index: 3;
+  will-change: transform;
+}
